--- a/voiceConversetion.ipynb
+++ b/voiceConversetion.ipynb
@@ -150,7 +150,7 @@
         "import os\n",
         "import openai\n",
         "\n",
-        "openai.api_key ='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'\n",
+        "openai.api_key ='insira_sua_chave",
         "\n",
         "response = openai.ChatCompletion.create(\n",
         "    model=\"gpt-3.5-turbo\",\n",
